# psynth

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  log.md
script/: analyze_samples.py
src/: Compressor.lf  Delay.lf  Envelope.lf  FFT.lf  Filter.lf  Keyboard.lf  Lane.lf  Main.lf  Oscillator.lf  Print.lf  Sequence.lf  SoundOutput.lf  SoundOutputSDL.lf  Synth.lf  UserInterface.lf  buffer.c  buffer.h  common.h  include.cmake  midi.c  midi.h
src/browser-ui/: index.html  script.js
src/lib/: Keyboard.lf  WebSocketServer.lf  buffer.c  buffer.h  common.h  freq.c  freq.h  midi.c  midi.h  psynth.cmake  psynth.h
